apps/pi-demo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pi-demo
  namespace: server
  labels:
    app.kubernetes.io/name: pi-demo
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`pi-demo.d-f.dev`)"
      kind: Rule
      services:
        - name: pi-demo
          port: 8080
      middlewares:
        - name: crowdsec
          namespace: server
  tls:
    certResolver: letsencrypt
